Update index.html style css
dodane style css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>ExploRide – Wielka Mapa Urbexu</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+   <link rel="stylesheet" href="style.css" />
   <style>
     html, body { margin: 0; padding: 0; height: 100%; font-family: sans-serif; }
     #map, #sidebar, #basemap-switcher { display: none; }
