--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     .pinezka:hover { text-decoration: underline; }
     .warstwa { margin-bottom: 10px; cursor: move; }
     .dragging { opacity: 0.5; }
-    .warstwa h3 { margin: 5px 0; font-size: 16px; display: flex; //justify-content: space-between;*// align-items: center; cursor: pointer; }
+    .warstwa h3 { margin: 5px 0; font-size: 16px; display: flex; align-items: center; cursor: pointer; }
     .warstwa input[type="checkbox"] { margin-right: 5px; }
     .pinezki-lista { margin-left: 10px; display: block; }
     .ukryta { display: none; }
