--- a/index.html
+++ b/index.html
@@ -274,10 +274,15 @@
         <input id="ewarstwa" value="${p.warstwa}" style="width: 100%"><br>
         <input id="eemoji" value="${p.emoji || ''}" list="emojiListDatalist" placeholder="Emoji" style="width: 100%"><br>
         <button onclick="zapiszLokalnie('${id}')">💾 Zapisz</button>
-        <button onclick="map.closePopup()">Anuluj</button>
       `;
       const marker = findMarkerByLatLng(lat, lng);
-      if (marker) marker.bindPopup(container).openPopup();
+      if (marker) {
+        marker.bindPopup(container).openPopup();
+        marker.once('popupclose', () => {
+          const coords = formatCoords(p.lat, p.lng);
+          marker.bindPopup(`<b>${p.emoji ? p.emoji + ' ' : ''}${p.nazwa}</b><br>${linkify(p.opis)}<br>${coords}<br><a href="https://maps.google.com/?q=${p.lat},${p.lng}" target="_blank">📍 Google Maps</a><br><br><button onclick=\"edytuj('${p.id}', ${p.lat}, ${p.lng})\">✏️ Edytuj</button>`);
+        });
+      }
     }
 
     function zapiszLokalnie(id) {
