Fix sidebar scrolling

--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
       bottom: 0;
       width: 300px;
       background: #f8f8f8;
-      overflow-y: auto;
       border-right: 1px solid #ccc;
       padding: 10px;
+      display: flex;
+      flex-direction: column;
+    }
+    #lista-warstw {
+      overflow-y: auto;
+      flex: 1;
     }
     #basemap-switcher {
       position: absolute;
