--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       padding: 10px;
       display: flex;
       flex-direction: column;
+      overflow: hidden;
     }
     #lista-warstw {
       overflow-y: auto;
