scrull lista bez narzedzi

--- a/index.html
+++ b/index.html
@@ -10,23 +10,24 @@
     html, body { margin: 0; padding: 0; height: 100%; font-family: sans-serif; }
     #map, #sidebar, #basemap-switcher { display: none; }
     #map { position: absolute; top: 0; left: 300px; right: 225px; bottom: 0; }
-    #sidebar {
-      position: absolute;
-      top: 0;
-      left: 0;
-      bottom: 0;
-      width: 300px;
-      background: #f8f8f8;
-      border-right: 1px solid #ccc;
-      padding: 10px;
-      display: flex;
-      flex-direction: column;
-      overflow: hidden;
-    }
-    #lista-warstw {
-      overflow-y: auto;
-      flex: 1;
-    }
+   #sidebar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 300px;
+  background: #f8f8f8;
+  border-right: 1px solid #ccc;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+   #lista-warstw {
+  flex: 1;
+  overflow-y: auto;
+  min-height: 0;
+}
     #basemap-switcher {
       position: absolute;
       top: 0;
@@ -38,9 +39,17 @@
       padding: 10px;
       overflow-y: auto;
     }
-    #wyszukiwarka { width: 80%; margin-bottom: 10px; padding: 5px; }
+  #wyszukiwarka {
+  width: 100%;
+  margin-bottom: 10px;
+  padding: 5px;
+  flex-shrink: 0;
+}
     .pinezka { margin: 5px 0; cursor: pointer; color: #000; }
-    #narzedzia { margin-bottom: 10px; }
+    #narzedzia {
+  margin-bottom: 10px;
+  flex-shrink: 0;
+}
     .tool-btn { font-size: 24px; background: none; border: none; cursor: pointer; font-family: "Noto Color Emoji", sans-serif; }
     .tool-btn.active { background: #ddd; }
     .pinezka.active { color: #007bff; font-weight: bold; }
