--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       top: 0;
       left: 0;
       bottom: 0;
-      width: 300px;
+      width: 280px;
       background: #f8f8f8;
       border-right: 1px solid #ccc;
       padding: 10px;
@@ -41,8 +41,9 @@
       overflow-y: auto;
     }
     #wyszukiwarka { width: 80%; margin-bottom: 10px; padding: 5px; flex-shrink: 0; }
-    .pinezka { margin: 5px 0; cursor: pointer; color: #000; }
+    .pinezka { margin: 7px 0; cursor: pointer; color: #000; font-size: 12px; }
     #narzedzia { margin-bottom: 10px; flex-shrink: 0; }
+    <hr>
     .tool-btn { font-size: 24px; background: none; border: none; cursor: pointer; font-family: "Noto Color Emoji", sans-serif; }
     .tool-btn.active { background: #ddd; }
     .pinezka.active { color: #007bff; font-weight: bold; }
@@ -90,8 +91,8 @@
     }
     #saveChanges {
       position: fixed;
-      bottom: 20px;
-      right: 235px;
+      bottom: 30px;
+      right: 45px;
       z-index: 1000;
       display: none;
     }
