--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
       flex-direction: column;
       height: 100%;
     }
+    #hr {
+  border: none;
+  height: 1px;
+  background-color: #ccc; /* lub np. red, black */
+  margin: 40px 0;
+}
     #lista-warstw {
       overflow-y: auto;
       flex: 1;
@@ -43,7 +49,6 @@
     #wyszukiwarka { width: 80%; margin-bottom: 10px; padding: 5px; flex-shrink: 0; }
     .pinezka { margin: 7px 0; cursor: pointer; color: #000; font-size: 12px; }
     #narzedzia { margin-bottom: 10px; flex-shrink: 0; }
-    <hr>
     .tool-btn { font-size: 24px; background: none; border: none; cursor: pointer; font-family: "Noto Color Emoji", sans-serif; }
     .tool-btn.active { background: #ddd; }
     .pinezka.active { color: #007bff; font-weight: bold; }
