--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@
       z-index: 1000;
       display: none;
     }
+      .leaflet-grab {
+    cursor: default !important;
+  }
+     .leaflet-dragging .leaflet-grab {
+    cursor: grabbing !important;
+  }
   </style>
 </head>
 <body>
